Update cs.json (POEditor.com)

--- a/PaperZee/utils/lang/cs.json
+++ b/PaperZee/utils/lang/cs.json
@@ -263,7 +263,9 @@
         "task_5": "Chytit /m/XeresDan/1707",
         "task_6": "Založení placáků",
         "task_7": "Zachycení/založení ubytování",
-        "task_8": "Zachycení cestovatelů"
+        "task_8": "Zachycení cestovatelů",
+        "task_9": "",
+        "task_10": ""
     },
     "themes": {
         "black": "Černá",
