Update da.json (POEditor.com)

--- a/PaperZee/utils/lang/da.json
+++ b/PaperZee/utils/lang/da.json
@@ -36,7 +36,7 @@
             "email": "eller emaile os på support@cuppazee.app"
         },
         "clans": "Klaner",
-        "logging_in": ""
+        "logging_in": "Logger ind..."
     },
     "activity": {
         "user_captured": "{user} skannede",
@@ -74,8 +74,8 @@
             "other": "{count} renoveringer"
         },
         "renovon": {
-            "one": "",
-            "other": ""
+            "one": "{count} renov-on",
+            "other": "{count} renov-ons"
         }
     },
     "user": {
@@ -85,7 +85,7 @@
         "your_bouncers": "Dine springere",
         "clan_progress": "Klan-fremskridt",
         "quebec_quest_progress": "\"Quebec udfordring\"-fremskridt",
-        "special_hunter_challenge": "Special-jæger udfordringen",
+        "special_hunter_challenge": "Specialjæger-udfordringen",
         "captured_types": "Skannede typer",
         "activity": "Aktivitet",
         "clan_stats": "Klanstatistik",
@@ -93,11 +93,11 @@
         "clan_info": "Klankrig-info FB-gruppe",
         "clan_info_desc": "Et godt sted at finde en klan eller stille spørgsmål!",
         "challenges": "Udfordringer",
-        "sh_lite": "Special-jæger lite",
-        "sh_pro": "Special-jæger pro",
-        "your_clan": "",
-        "no_clan": "",
-        "no_clan_desc": ""
+        "sh_lite": "Let specialjæger-udfordring",
+        "sh_pro": "Avanceret specialjæger-udfordring",
+        "your_clan": "Din klan",
+        "no_clan": "Du er ikke i en klan",
+        "no_clan_desc": "Se dit fremskridt nedenfor"
     },
     "inventory": {
         "undeployed": "Ikke-placerede",
@@ -136,7 +136,7 @@
         },
         "last_captured": "Sidst skannet: {time}",
         "in_limbo": "Tager en pause",
-        "host": ""
+        "host": "På {munzee} af {username}"
     },
     "calendar": {
         "days": {
@@ -201,8 +201,8 @@
             "myth_2": "Spejl- eller moderne mytologisk",
             "pc_1": "Posevæsen S1",
             "pc_2": "Posevæsen S2",
-            "flat": "",
-            "temp": "",
+            "flat": "Fancy flade",
+            "temp": "Udviklingsspringer / midlertidig spiller-ejet springer",
             "scatter": "Strøede"
         },
         "pro": {
@@ -216,10 +216,10 @@
             "pc_1": "Posevæsen S1",
             "pc_2": "Posevæsen S2",
             "pc_fun": "Funfinity-sten",
-            "flat": "",
-            "temp": "",
-            "pscatter": "",
-            "vscatter": ""
+            "flat": "Fancy flade",
+            "temp": "Udviklingsspringer / midlertidig spiller-ejet springer",
+            "pscatter": "Fysiske strøede",
+            "vscatter": "Virtuelle strøede"
         }
     },
     "notifications": {
@@ -233,8 +233,8 @@
         "update": "Gennemtving opdatering",
         "theme": "Tema: {name}",
         "language": "Sprog: {name}",
-        "logout": "",
-        "save": ""
+        "logout": "Log ud",
+        "save": "Gem indstillinger"
     },
     "bouncers": {
         "duration": "Varighed: {duration}"
@@ -245,61 +245,63 @@
         "type": "Type: {type}"
     },
     "quest": {
-        "task_1": "",
-        "task_2": "",
+        "task_1": "Mystiske skanninger/placeringer",
+        "task_2": "Udviklings-skanninger/placeringer",
         "task_3": "Våben-skanninger/-placeringer",
         "task_4": "Juvel-skanninger/-placeringer",
         "task_5": "Skan /m/XeresDan/1707",
-        "task_6": "",
-        "task_7": "",
-        "task_8": ""
+        "task_6": "Flad ven placeringer",
+        "task_7": "Destination skanninger/placeringer",
+        "task_8": "Springerskanninger",
+        "task_9": "",
+        "task_10": ""
     },
     "themes": {
-        "black": "",
-        "blue": "",
-        "bluegrey": "",
-        "darkblue": "",
-        "green": "",
-        "grey": "",
-        "purple": "",
-        "white": ""
+        "black": "Sort",
+        "blue": "Blå",
+        "bluegrey": "Blågrå",
+        "darkblue": "Mørk blå",
+        "green": "Grøn",
+        "grey": "Grå",
+        "purple": "Lilla",
+        "white": "Hvid"
     },
     "screens": {
-        "_redirect": "",
-        "Map": "",
-        "Tools": "",
-        "Settings": "",
-        "Notifications": "",
-        "Info": "",
-        "Scanner": "",
-        "Calendar": "",
-        "Bouncers": "",
-        "BouncerMap": "",
-        "MunzeeDetails": "",
-        "MunzeeDetailsID": "",
-        "AllClans": "",
-        "ClanRequirements": "",
-        "ClanSearch": "",
-        "Clan": "",
-        "UserSearch": "",
-        "UserDetails": "",
-        "UserActivity": "",
-        "UserInventory": "",
-        "UserClan": "",
-        "UserQuest": "",
-        "UserCapturesCategory": "",
-        "UserSHCPro": "",
-        "UserSHCLite": "",
-        "UserSHC": "",
-        "UserBouncers": "",
-        "DBType": "",
-        "DBSearch": "",
-        "DBCategory": "",
-        "Auth": ""
+        "_redirect": "_redirect",
+        "Map": "Kort",
+        "Tools": "Værktøjer",
+        "Settings": "Indstillinger",
+        "Notifications": "Notifikationer",
+        "Info": "Info",
+        "Scanner": "Skanner",
+        "Calendar": "Kalender",
+        "Bouncers": "Springere",
+        "BouncerMap": "Kort over springere",
+        "MunzeeDetails": "Munzee-detaljer",
+        "MunzeeDetailsID": "Munzee-detaljer",
+        "AllClans": "Alle klaner",
+        "ClanRequirements": "Klan-krav",
+        "ClanSearch": "Klansøgning",
+        "Clan": "Klan-statistik",
+        "UserSearch": "Bruger-søgning",
+        "UserDetails": "Bruger-detaljer",
+        "UserActivity": "Aktivitet",
+        "UserInventory": "Beholdning",
+        "UserClan": "Klanfremskridt",
+        "UserQuest": "Udfordringsfremskridt",
+        "UserCapturesCategory": "Skannede kategorier",
+        "UserSHCPro": "Avanceret specialjæger-udfordring",
+        "UserSHCLite": "Let specialjæger-udfordring",
+        "UserSHC": "Klassisk specialjæger-udfordring",
+        "UserBouncers": "Springere",
+        "DBType": "Databasetype",
+        "DBSearch": "Databasesøgning",
+        "DBCategory": "Databasekategori",
+        "Auth": "Autentificer"
     },
     "changelog": {
-        "build_n": "",
-        "continue": "",
-        "no_changelog": ""
+        "build_n": "Build {n}",
+        "continue": "Fortsæt til CuppaZee",
+        "no_changelog": "Ingen ændringslog"
     }
 }
