--- a/PaperZee/utils/lang/en-gb.json
+++ b/PaperZee/utils/lang/en-gb.json
@@ -252,7 +252,9 @@
         "task_5": "Capture /m/XeresDan/1707",
         "task_6": "Flat Friend Deps",
         "task_7": "Destination Caps/Deps",
-        "task_8": "Bouncer Caps"
+        "task_8": "Bouncer Caps",
+        "task_9": "Flat Friend Caps/Deps",
+        "task_10": "Capture \"/m/GPSmAQ/1\""
     },
     "themes": {
         "black": "Black",
