Update en-us.json (POEditor.com)

--- a/PaperZee/utils/lang/en-us.json
+++ b/PaperZee/utils/lang/en-us.json
@@ -252,7 +252,9 @@
         "task_5": "Capture /m/XeresDan/1707",
         "task_6": "Flat Friend Deps",
         "task_7": "Destination Caps/Deps",
-        "task_8": "Bouncer Caps"
+        "task_8": "Bouncer Caps",
+        "task_9": "",
+        "task_10": ""
     },
     "themes": {
         "black": "Black",
