Update fi.json (POEditor.com)

--- a/PaperZee/utils/lang/fi.json
+++ b/PaperZee/utils/lang/fi.json
@@ -252,7 +252,9 @@
         "task_5": "Kappaa /m/XeresDan/1707",
         "task_6": "Flattien deppaukset",
         "task_7": "Destination-aktiviteetti",
-        "task_8": "Pomppijoiden cappaus"
+        "task_8": "Pomppijoiden cappaus",
+        "task_9": "",
+        "task_10": ""
     },
     "themes": {
         "black": "Musta",
