Update lt.json (POEditor.com)

--- a/PaperZee/utils/lang/lt.json
+++ b/PaperZee/utils/lang/lt.json
@@ -263,7 +263,9 @@
         "task_5": "",
         "task_6": "",
         "task_7": "",
-        "task_8": ""
+        "task_8": "",
+        "task_9": "",
+        "task_10": ""
     },
     "themes": {
         "black": "",
